firmware/build/log/idf_py_stderr_output_20855
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/position_handler.cpp: In function 'esp_err_t format_all_positions(MotionController*, char*, size_t)':
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/position_handler.cpp:78:9: error: 'strncat' was not declared in this scope
   78 |         strncat(response + written, pos_buf, remaining - 1);
      |         ^~~~~~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/position_handler.cpp:22:1: note: 'strncat' is defined in header '<cstring>'; this is probably fixable by adding '#include <cstring>'
   21 | #include <cstdio>
  +++ |+#include <cstring>
   22 | 
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/position_handler.cpp:87:5: error: 'strncat' was not declared in this scope
   87 |     strncat(response + written, "\r\n", remaining - 1);
      |     ^~~~~~~
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/control/command_executor/position_handler.cpp:87:5: note: 'strncat' is defined in header '<cstring>'; this is probably fixable by adding '#include <cstring>'
make[2]: *** [esp-idf/control/CMakeFiles/__idf_control.dir/command_executor/position_handler.cpp.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [esp-idf/control/CMakeFiles/__idf_control.dir/all] Error 2
make: *** [all] Error 2
